--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ html {
     border-bottom: 1px solid #f1f1f1;
 }
 
+.btn {
+    padding: 8px 16px;
+}
+
 
 /* grid */
 
@@ -27,7 +31,7 @@ html {
 }
 
 .col-l-3 {
-    max-width: 25%;
+    width: 25%;
 }
 
 
@@ -115,15 +119,16 @@ html {
 
 #slider {
     max-width: 1500px;
+    position: relative;
 }
 
 .slider__img img {
     width: 100%;
-    /* position: relative; */
 }
 
 .slider__name {
     /* display: flex; */
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -255,14 +260,42 @@ html {
 
 /* responsive */
 
-@media (max-width: 1023px) and (min-width: 740px) {
-    .col-m-6 {
-        max-width: 50%;
+
+/* tablet & phone */
+
+@media (max-width:1023px) {
+    .contact__form-control {
+        padding: 10px;
+    }
+    .btn {
+        padding: 12px 16px;
     }
 }
 
+
+/* tablet */
+
+@media (max-width: 1023px) and (min-width: 740px) {
+    .col-m-6 {
+        width: 50%;
+    }
+    .slider__name h1 {
+        display: flex;
+        flex-flow: column;
+    }
+}
+
+
+/* phone */
+
 @media (max-width:739px) {
     .s-col-full {
-        max-width: 100%;
+        width: 100%;
+    }
+    .navbar {
+        display: none;
+    }
+    .slider__name span:last-child {
+        display: none;
     }
 }
